--- a/source/styleCadastro.css
+++ b/source/styleCadastro.css
@@ -1,3 +1,13 @@
+form{
+    margin: 1px;
+    padding: 50px 150px;
+}
+
+.form-check-label, .btn .btn-primary{
+    text-align: center;
+    justify-content: center;
+    align-content: center;
+}
 :root{
     --input-error: rgb(255, 71, 71);
     --input-success: green;
