--- a/source/styleLogin.css
+++ b/source/styleLogin.css
@@ -18,7 +18,7 @@ body{
 }
 .login{
     width: 100vw;
-    height: 100vh;
+    height: 80vh;
     background-size: cover;
     margin: 0;
     display: flex;
@@ -27,7 +27,7 @@ body{
 }
 
 .login__container{
-    width: 380px;
+    width: 500px;
     background-color: #ffffff;
     box-sizing: border-box;
     padding: 22px;
@@ -35,7 +35,6 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 1%;
 }
 .login__form {
     width: 100%;
@@ -120,9 +119,9 @@ a{
     display: block;
     height: 1px;
     width: 0;
-    background: linear-gradient(217deg, rgba(56, 25, 85, 0.8), rgba(255,0,0,0) 70.71%),
-    linear-gradient(127deg, rgba(255, 0, 234, 0.8), rgba(0,255,0,0) 70.71%),
-    linear-gradient(336deg, rgba(255, 251, 0, 0.8), rgba(0,0,255,0) 70.71%);
+    background: linear-gradient(217deg, rgb(105, 89, 87), rgba(255, 211, 211, 0) 70.71%),
+    linear-gradient(127deg, rgb(255, 209, 207), rgba(0,255,0,0) 70.71%),
+    linear-gradient(336deg, rgba(107, 90, 84, 0.8), rgba(0,0,255,0) 70.71%);
     transition: 0.3s ease-in-out;
 }
 .login__input-border.error {
@@ -139,11 +138,11 @@ a{
     height: auto;
     border-radius: 10px;
 }
-#cabecalho {
-    text-align: left;
-    padding: 1%;
-    padding-left: 10%;
-    outline-style: dashed;
-    outline-color: var(--black);
-    outline-width: 2px;
+p {
+    color: grey;
+    text-align: center;
+    height: 48px;
+    width: 100%;
+    padding: 10px;
+    font-size: 18px;
 }
