--- a/app-web-backend/app-web-backend/Views/Usuarios/Index.cshtml
+++ b/app-web-backend/app-web-backend/Views/Usuarios/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Registre-se clicando no botão abaixo!</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Registrar</a>
 </p>
 <table class="table">
     <thead>
