--- a/app-web-backend/app-web-backend/Views/Usuarios/Login.cshtml
+++ b/app-web-backend/app-web-backend/Views/Usuarios/Login.cshtml
@@ -3,12 +3,11 @@
 @{
     ViewData["Title"] = "Login";
 }
-
-<h1>Login</h1>
-
-<hr />
+<br />
+<div class="row"><h1>Efetue seu Login</h1></div>
+<br />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 login__container container">
         <form asp-action="Login">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -22,8 +21,7 @@
                 <span asp-validation-for="Senha" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Entrar" class="btn btn-primary" /> ou 
-                <a class="btn btn-info" asp-controller="Home" asp-action="Index">Voltar</a>
+                <button type="submit" value="Entrar" class="btn btn-primary login__submit">Login</button>
             </div>
         </form>
         <h3> @ViewBag.Message </h3>
